<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PartidoDetailActivity" >

    <TabHost
        android:id="@+id/partido_detail_tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab_partido"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/fecha_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5pt" />

                    <TextView
                        android:id="@+id/campo_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5pt" />

                    <TextView
                        android:id="@+id/rival_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5pt" />

                    <TextView
                        android:id="@+id/local_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5pt" />

                    <RadioGroup
                        android:id="@+id/map_radio_group_convocatoria"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.8"
                        android:background="@drawable/box_clas"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/texto_comentario_partidoConvocatoria"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/texto_comentario_partido" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/texto_delegado_partido"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/texto_delegado_partido" />

                            <CheckBox
                                android:id="@+id/check_delegado_partido"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <Button
                                android:id="@+id/btn_apuntarse_partidoConvocatoria"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button"
                                android:onClick="anadirConvocatoria"
                                android:text="@string/texto_apuntarse_partido" />

                            <Button
                                android:id="@+id/btn_borrarse_partidoConvocatoria"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button"
                                android:onClick="borrarConvocatoria"
                                android:text="@string/texto_borrarse_partido" />
                        </LinearLayout>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_tiempo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_refrescar_tiempo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="refrescarTiempo"
                        android:text="@string/texto_obtener_tiempo" />

                    <TextView
                        android:id="@+id/fecha_tiempo_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5pt" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/icon_fecha_imageview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/texto_imagen_tiempo" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tempMin_tiempo_textView"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5pt" />

                        <TextView
                            android:id="@+id/tempMax_tiempo_textView"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5pt" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_convocatoria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_refrescar_convocados"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="refrescarConvocados"
                        android:text="@string/texto_obtener_convocados" />

                    <ListView
                        android:id="@android:id/list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="false" >
                    </ListView>

                    <TextView
                        android:id="@android:id/empty"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_empty" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>