<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="10pt"
    tools:context=".PartidosActivity" >

    <TableRow
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <!-- Partidos -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_main_partidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_partidos"
                android:onClick="abrirPartidos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_partidos"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <!-- Equipos -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_main_equipos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_equipos"
                android:onClick="abrirEquipos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_equipos"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <!-- Equipos -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_main_plantilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_plantilla"
                android:onClick="abrirPlantilla" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_plantilla"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <!-- Mapa -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_main_clasificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_clasificacion"
                android:onClick="abrirClasificacion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_clasificacion"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <!-- Mapa -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_main_mapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_mapa"
                android:onClick="mostrarComoLlegar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_campo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </TableRow>

</TableLayout>